--- a/Backend/views/chart.ejs
+++ b/Backend/views/chart.ejs
@@ -1,49 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js" integrity="sha512-GMGzUEevhWh8Tc/njS0bDpwgxdCJLQBWG3Z2Ct+JGOpVnEmjvNx6ts4v6A2XJf1HOrtOsfhv3hBKpK9kE5z8AQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <!-- ================= NAVBAR DÉPENDENCE ================= -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="icon" type="image/png" href="/logo.png">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="/nav.js"></script>
-    <!-- ================= FIN NAVBAR DÉPENDENCE ================= -->
-    <title>ChartJS</title>
-</head>
-<!-- ================= NAVBAR ================= -->
+<%- include('header') %>
+
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.6.0/chart.min.js" integrity="sha512-GMGzUEevhWh8Tc/njS0bDpwgxdCJLQBWG3Z2Ct+JGOpVnEmjvNx6ts4v6A2XJf1HOrtOsfhv3hBKpK9kE5z8AQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+        <title>ChartJS</title>
+    </head>
     <body id="body-pd">
         <header class="header" id="header">
            <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
         </header>
-        <div class="l-navbar" id="nav-bar">
-           <nav class="nav">
-              <div>
-                 <a href="/PharmaScieSauteuse" class="nav_logo"> 
-                 <i class='bx bx-heart nav_logo-icon'></i> 
-                 <span class="nav_logo-name">Pharmacie Sautheuz</span> 
-                 </a>
-                 <div class="nav_list"> 
-                    <a href="#" class="nav_link"> 
-                    <i class='bx bx-grid-alt nav_icon'></i> 
-                    <span class="nav_name">Gestion des patients</span> 
-                    </a> 
-                    <a href="/PharmaScieSauteuse/Formulaire" class="nav_link active"> 
-                      <i class='bx bx-user nav_icon'></i> 
-                      <span class="nav_name">Ajouter un nouveau patient</span> 
-                    </a> 
-                     <a href="/PharmaScieSauteuse/Gestion-de-Stock" class="nav_link"> <i class='bx bx-bookmark nav_icon'></i> 
-                    <span class="nav_name">Gestion des stocks</span> 
-                  </a>
-                 </div>
-              </div>
-           </nav>
-        </div>
-        <!-- ================= FIN NAVBAR ================= -->
+            <!-- ================= NAVBAR ================= -->
+                            <%- include('navbar') %>
+            <!-- ================= NAVBAR ================= -->
+
         <!-- ================= CONTENEUR POUR AFFICHAGE LISTE DES PATIENTS =================-->
         <div class="height-100 bg-light">
             <canvas id="myChart">
@@ -93,6 +60,5 @@
                     }
                 });
             </script>
-        </div>           
-</body>
-</html>
+
+<%- include('footer') %>
