--- a/Backend/views/navbar.ejs
+++ b/Backend/views/navbar.ejs
@@ -11,7 +11,7 @@
                     <i class='bx bx-grid-alt nav_icon'></i> 
                     <span class="nav_name">Gestion des patients</span> 
                     </a> 
-                    <a href="/PharmaScieSauteuse/Formulaire" class="nav_link active"> 
+                    <a href="/PharmaScieSauteuse/Formulaire" class="nav_link"> 
                       <i class='bx bx-user nav_icon'></i> 
                       <span class="nav_name">Ajouter un nouveau patient</span> 
                     </a> 
