--- a/Backend/views/stock.ejs
+++ b/Backend/views/stock.ejs
@@ -39,6 +39,8 @@ Utilité : Affichage de la liste des stocks
                         <th class="column2">Nom commercial</th>
                         <th class="column3">Quantité en stock</th>
                         <th class="column4">Quantité nécéssaire</th>
+                        <th class="column5">En voir plus</th>
+                        <th class="column6"></th>
                     </tr>
                 </thead>
             </table>
@@ -53,6 +55,8 @@ Utilité : Affichage de la liste des stocks
                         <td class="column2"><%=medicament.Nom_Medic%></td>
                         <td class="column3"><%=medicament.Qte_En_Stock%> boîtes</td>
                         <td class="column4"><%=medicament.Qte_Necessaire%> boîtes</td>
+                        <td class="column5"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Stock/Graphe/<%=medicament.idMedic%>">Graphique</a></td>
+                        <td class="column6"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Stock/Update">Modifier</a></td>
                     </tr>
 
                     <% if(c == 1) c = 0; else c = 1 %>
