--- a/Backend/views/fichePatient.ejs
+++ b/Backend/views/fichePatient.ejs
@@ -5,6 +5,9 @@
    <body id="body-pd">
       <header class="header" id="header">
          <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
+            <div class="Droite">
+               <a class="btn btn-primary" href="/pharmaScieSauteuse/Gestion-de-Patient/Update/<%=noSS%>">Modifier</a>
+            </div>
       </header>
          <!-- ================= NAVBAR ================= -->
                      <%- include('navbar') %>
