--- a/Backend/views/formPat.ejs
+++ b/Backend/views/formPat.ejs
@@ -2,7 +2,38 @@
 
       <link rel="stylesheet" type="text/css" href="/formulaire.css" media="all"/>
       <!-- SCRIPT NOUVEAU TRAITEMENT OPTIONNEL : -->
-      <script src="/plusieursTraitement.js"></script>
+      <script>
+         let a = 1;
+         let b = 0;
+
+         function newline(){
+             let ecriture = "<div id='T"+a+"' class='align'><select class='field3' id='Count"+a+"' name='traitement"+a+"' required><option value='0' selected>- Choix Médicament -</option><% medicaments.forEach(function(medicament){ %> <option value='<%=medicament.idMedic%>'><%=medicament.Nom_Medic%></option> <% }) %></select>";
+             ecriture += "<input type='number' class='field1' name='Qte"+a+"' id='LaQte"+a+"' placeholder='Quantité (mois)*' minlength='1' maxlength='2' required>";
+             ecriture += "<input type='number' class='field1'name='duree"+a+"' id='LaDuree"+a+"' placeholder='Durée traitement (mois)*' minlength='1' maxlength='2' required><button id='del"+a+"' onclick='delline()'>x</button></div>";
+             document.getElementById('T'+b).insertAdjacentHTML('afterend', ecriture);
+             a = a+1
+             b = b+1
+             document.getElementById('nbT').value = a;
+         }
+
+         function delline(){
+             a = a-1
+             b = b-1
+             var select = document.getElementById("Count"+a);
+             select.remove();
+             var Qte = document.getElementById("LaQte"+a);
+             Qte.remove();
+             var duree = document.getElementById("LaDuree"+a);
+             duree.remove();
+             var delbtn = document.getElementById("del"+a);
+             delbtn.remove();
+             var delDiv = document.getElementById("T"+a);
+             delDiv.remove();
+             document.getElementById('nbT').value = a;
+         }
+
+      </script>
+      
       <title>Formulaire ajout de patient</title>
    </head>
    <body id="body-pd">
@@ -23,10 +54,10 @@
             <form action="/PharmaScieSauteuse/Confirmation" method="post">
                <fieldset id="dynamic">
                   <legend><span class="number">1</span> Patient :</legend>
-                  <input type="text" class="field2" name="nom" placeholder="Nom *" required>
-                  <input type="text" class="field2" name="prenom" placeholder="Prénom *" required>
+                  <input type="text" class="field2" name="nom" placeholder="Nom *" minlength="3" maxlength="35" required>
+                  <input type="text" class="field2" name="prenom" placeholder="Prénom *" minlength="3" maxlength="20" required>
                   <input type="text" class="field2" name="noSS" placeholder="Numéro de carte vitale *" minlength="15" maxlength="15" required>
-                  <input type="date" class="field2" name="date_naissance" required>
+                  <input type="date" class="field2" name="date_naissance" min="1900-01-01" max="<%=moment().format("YYYY-MM-DD")%>" required>
                   <select  class="field2" name="pathologie" id="patoche">
 
                      <option value='0' selected>- Pathologie -</option>
@@ -44,8 +75,8 @@
                         <% }) %>
 
                      </select>
-                     <input type="number" class="field1" name="Qte" placeholder="Nombre de boites par mois *" required>
-                     <input type="number" class="field1" name="duree" placeholder="Durée traitement (mois) *" required>
+                     <input type="number" class="field1" name="Qte" placeholder="Nombre de boites par mois *" min="1" max="20" required>
+                     <input type="number" class="field1" name="duree" placeholder="Durée traitement (mois) *" min="1" max="12" required>
                      <button id="create" onclick="newline()">+</button>
                   </div>
                   <!-- FIN TRAITEMENT OBLIGATOIRE -->
