--- a/Backend/views/formOrdonnance.ejs
+++ b/Backend/views/formOrdonnance.ejs
@@ -50,7 +50,7 @@
          <!-- ================= CONTENEUR POUR AFFICHAGE LISTE DES PATIENTS =================-->
          <div class="height-100 bg-light">
          <div class="form-style-5">
-            <form action="/PharmaScieSauteuse/Ordonnance/Confirmation" method="post">
+            <form action="/PharmaScieSauteuse/Ordonnance/Confirmation/<%=noSS%>" method="post">
                <fieldset id="dynamic">
                   <legend><span class="number">1</span> Ordonnance :</legend>
 
