--- a/Backend/views/confirm.ejs
+++ b/Backend/views/confirm.ejs
@@ -1,14 +1,22 @@
-<!DOCTYPE html>
-<html lang="fr">
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Enregistrement confirmé !</title>
-    </head>
-
+    <%- include('header') %>
+    <title>Inscription confirmé </title>
     <body>
-        <a href="http://localhost:3000/PharmaScieSauteuse">Retour</a>
-        <h1>Inscription Terminé !</h1>
-    
+        <div class="row justify-content-center">
+            <div class="col-md-12 col-sm-12">
+                <div class="card shadow-lg border-0 rounded-lg mt-5 mx-auto" style="width: 30rem;">
+                    <h3 class="card-header display-1 text-muted text-center">
+                        Confirmation
+                    </h3>
+        
+                    <span class="card-subtitle mb-2 text-muted text-center">
+                        Les données on bien été mise à jour !
+                    </span>
+        
+                    <div class="card-body mx-auto">
+                        <a type="button" href="http://localhost:3000/PharmaScieSauteuse" class="btn btn-sm btn-color  text-white"> Retour </a>
+                    </div>
+                </div>
+            </div>
+        </div>
 </html>
+
