--- a/Backend/views/formModifPatient.ejs
+++ b/Backend/views/formModifPatient.ejs
@@ -7,9 +7,7 @@
       <header class="header" id="header">
          <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
       </header>
-      <div class="Centre">      
-         <h1>Formulaire de Modification : Patient</h1>
-      </div>
+
 
          <!-- ================= NAVBAR ================= -->
                         <%- include('navbar') %>
@@ -20,6 +18,7 @@
          <div class="form-style-5">
             <form action="/PharmaScieSauteuse/Confirmation" method="post">
                <fieldset id="dynamic">
+                  <legend class="heading">Formulaire de Modification : Patient</legend>
                   <legend><span class="number">1</span> Patient :</legend>
                   <input type="text" class="field2" name="nom" placeholder="Nom *" required>
                   <input type="text" class="field2" name="prenom" placeholder="Prénom *" required>
@@ -101,4 +100,4 @@
                <input id="nbT" name="nb_traitement" class="hidden">
             </form>
 
-<%- include('header') %>
+<%- include('footer') %>
