--- a/Backend/views/formOrdonnance.ejs
+++ b/Backend/views/formOrdonnance.ejs
@@ -38,11 +38,11 @@
    </head>
    <body id="body-pd">
       <header class="header" id="header">
-         <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
+         <div class="header_toggle"> 
+            <i class='bx bx-menu' id="header-toggle"></i>      
+         </div>
+        
       </header>
-      <div class="Centre">      
-         <h1>Formulaire de nouvelle Ordonnance</h1>
-      </div>
          <!-- ================= NAVBAR ================= -->
                         <%- include('navbar') %>
          <!-- ================= NAVBAR ================= -->
@@ -52,6 +52,7 @@
          <div class="form-style-5">
             <form action="/PharmaScieSauteuse/Ordonnance/Confirmation/<%=noSS%>" method="post">
                <fieldset id="dynamic">
+                  <legend class="heading">Formulaire de nouvelle Ordonnance</legend>
                   <legend><span class="number">1</span> Ordonnance :</legend>
 
                   <select  class="field2" name="pathologie" id="patoche">
@@ -95,4 +96,4 @@
                <input id="nbT" name="nb_traitement" class="hidden">
             </form>
 
-<%- include('header') %>
+<%- include('footer') %>
