--- a/Backend/views/formPat.ejs
+++ b/Backend/views/formPat.ejs
@@ -40,9 +40,6 @@
       <header class="header" id="header">
          <div class="header_toggle"> <i class='bx bx-menu' id="header-toggle"></i> </div>
       </header>
-      <div class="Centre">      
-         <h1>Formulaire de nouveau Patient</h1>
-      </div>
 
          <!-- ================= NAVBAR ================= -->
                         <%- include('navbar') %>
@@ -53,6 +50,7 @@
          <div class="form-style-5">
             <form action="/PharmaScieSauteuse/Patient/Confirmation" method="post">
                <fieldset id="dynamic">
+                  <legend class="heading">Formulaire de nouveaux Patient</legend>
                   <legend><span class="number">1</span> Patient :</legend>
                   <input type="text" class="field2" name="nom" placeholder="Nom *" minlength="3" maxlength="35" required>
                   <input type="text" class="field2" name="prenom" placeholder="Prénom *" minlength="3" maxlength="20" required>
@@ -113,4 +111,4 @@
                <input type="number" id="nbT" name="nb_traitement" value="1" class="hidden">
             </form>
 
-<%- include('header') %>
+<%- include('footer') %>
