Formulaire modif Medicament

--- a/Backend/public/formulaire.css
+++ b/Backend/public/formulaire.css
@@ -4,7 +4,7 @@
 	background: #f4f7f8;
 	margin: 10px auto;
 	padding: 20px;
-	background: #f4f7f8;
+	background: #d8dcdd;
 	border-radius: 8px;
 	font-family: Georgia, "Times New Roman", Times, serif;
 }
