--- a/Backend/views/formModifPatient.ejs
+++ b/Backend/views/formModifPatient.ejs
@@ -1,7 +1,7 @@
 <%- include('header') %>
 
       <link rel="stylesheet" type="text/css" href="/formulaire.css" media="all"/>
-      <title>Formulaire ajout de patient</title>
+      <title>Formulaire modification : patient</title>
    </head>
    <body id="body-pd">
       <header class="header" id="header">
