--- a/Backend/views/stock.ejs
+++ b/Backend/views/stock.ejs
@@ -15,7 +15,7 @@ Utilité : Affichage de la liste des stocks
          <!-- barre de recherche -->
             <div class="wrap">
                 <div class="search">
-                <input type="text" class="searchTerm" placeholder="Référence médicament">
+                <input type="text" class="searchTerm" placeholder="Nom médicament">
                 <button type="submit" class="searchButton">
                     <i class="bx bx-search"></i>
                 </button>
@@ -35,11 +35,11 @@ Utilité : Affichage de la liste des stocks
             <table>
                 <thead>
                     <tr class="row100 head">
-                        <th class="column1">Référence</th>
-                        <th class="column2">Nom commercial</th>
-                        <th class="column3">Quantité en stock</th>
-                        <th class="column4">Quantité nécéssaire</th>
-                        <th class="column5">En voir plus</th>
+                        <th class="column1">Nom commercial</th>
+                        <th class="column2">Quantité en stock</th>
+                        <th class="column3">Quantité nécéssaire</th>
+                        <th class="column4">En voir plus</th>
+                        <th class="column5"></th>
                         <th class="column6"></th>
                     </tr>
                 </thead>
@@ -51,12 +51,12 @@ Utilité : Affichage de la liste des stocks
                 
                 <% medicaments.forEach(function(medicament){ %> 
                     <tr class='body row10<%=c%>'>
-                        <td class="column1"><%=medicament.idMedic%></td>
-                        <td class="column2"><%=medicament.Nom_Medic%></td>
-                        <td class="column3"><%=medicament.Qte_En_Stock%> boîtes</td>
-                        <td class="column4"><%=medicament.Qte_Necessaire%> boîtes</td>
-                        <td class="column5"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Stock/Graphe/<%=medicament.idMedic%>">Graphique</a></td>
-                        <td class="column6"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Stock/Update">Modifier</a></td>
+                        <td class="column1"><%=medicament.Nom_Medic%></td>
+                        <td class="column2"><%=medicament.Qte_En_Stock%> boîtes</td>
+                        <td class="column3"><%=medicament.Qte_Necessaire%> boîtes</td>
+                        <td class="column4"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Stock/Graphe/<%=medicament.idMedic%>">Graphique</a></td>
+                        <td class="column5"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Stock/Update/<%=medicament.idMedic%>">Modifier</a></td>
+                        <td class="column6"><a class="btn btn-outline-secondary" href="/pharmaScieSauteuse/Gestion-de-Patient/delete/<%=medicament.idMedic%>">Supprimer</a></td>
                     </tr>
 
                     <% if(c == 1) c = 0; else c = 1 %>
